--- a/avengers_phonebook/templates/home.html
+++ b/avengers_phonebook/templates/home.html
@@ -2,10 +2,13 @@
 
 {% block content %}
 
-<header>
+<header class="banner">
     <h1>Welcome to 1991!</h1>
+    <div class="tagline">
+        <p>Get ready for an incredible call.</p>
+    </div>
 </header>
 
-<p>Visit "phonebook" to find each Avenger's landline phone number</p>
+<audio src="../static/media/Avengers_Theme.mp3" autoplay=false></audio>
 
 {% endblock content %}
