--- a/avengers_phonebook/templates/base.html
+++ b/avengers_phonebook/templates/base.html
@@ -7,7 +7,7 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-<link rel="stylesheet" href="/avengers_phonebook/static/css/main.css">
+<link rel="stylesheet" href="../static/css/main.css">
 <title>Avenger's Phonebook</title>
 </head>
 <body>
