--- a/avengers_phonebook/static/css/main.css
+++ b/avengers_phonebook/static/css/main.css
@@ -1,5 +1,6 @@
 * {
     font-family: monospace;
+    font-size: large;
 }
 
 .banner {
@@ -15,6 +16,7 @@ h1 {
     color: white;
     margin-left: 3vw;
     padding-top: 5vh;
+    text-shadow: 2px 2px black;
 }
 
 .tagline {
@@ -22,4 +24,42 @@ h1 {
     font-style: italic;
     color: silver;
     margin-left: 3vw;
+    text-shadow: 1px 1px black;
+}
+
+h3 {
+    margin-left: 3vw;
+    margin-bottom: 5vh;
+    padding-top: 5vh;
+}
+
+.phone-nums {
+    margin-left: 2vw;
+    list-style-type: none;
+}
+
+.avengers-list {
+    list-style-type: none;
+    border-bottom: 2px solid rgb(98, 117, 98);
+    width: 98%;
+}
+
+h4 {
+    margin-left: 3vw;
+    padding-top: 5vh;
+}
+
+form {
+    padding: 3px 30px 30px 30px;
+    margin: 3px 30px 30px 30px;
+}
+
+.form-control::placeholder { 
+    color: lightgray; 
+} 
+
+.btn, .btn-success {
+    margin-top: 3vh;
+    background-color: rgb(98, 117, 98);
+    border: 1px solid rgb(98, 117, 98);
 }
