--- a/avengers_phonebook/static/css/main.css
+++ b/avengers_phonebook/static/css/main.css
@@ -58,6 +58,13 @@ form {
     color: lightgray; 
 } 
 
+.form-control:focus {
+    outline: 1px 1px 1px 1px solid greenyellow;
+    border-color: greenyellow;
+    border: 4px solid greenyellow;
+    box-shadow: 0px 0px 0px 0px;
+}
+
 .btn, .btn-success {
     margin-top: 3vh;
     background-color: rgb(98, 117, 98);
