--- a/avengers_phonebook/templates/nav.html
+++ b/avengers_phonebook/templates/nav.html
@@ -12,7 +12,16 @@
           <a class="nav-link" href="{{ url_for('phonebook') }}">Phonebook</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{ url_for('newnum') }}">New Num</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
         </li>
       </ul>
     </div>
