--- a/avengers_phonebook/templates/nav.html
+++ b/avengers_phonebook/templates/nav.html
@@ -9,10 +9,10 @@
           <a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('directory') }}">Phonebook</a>
+          <a class="nav-link" href="{{ url_for('phonebook') }}">Phonebook</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('phonebook') }}">Directory</a>
+          <a class="nav-link" href="{{ url_for('register') }}">Register</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('login') }}">Login</a>
