--- a/avengers_phonebook/templates/phonebook.html
+++ b/avengers_phonebook/templates/phonebook.html
@@ -2,28 +2,16 @@
 
 {% block content %}
 
-<h1 class="justify-content-center">Register Phone Number</h1>
-<form action="" method="post">
-    {{ form.hidden_tag() }}
-    <div class="form-group">
-        <fieldset>
-            {{ form.username.label }}
-            {{ form.username(class="form-control",placeholder="Username") }}
-        </fieldset>
-        <fieldset>
-            {{ form.usernamephone_number.label }}
-            {{ form.usernamephone_number(class="form-control", placeholder="Phone") }}
-        </fieldset>
-        <fieldset>
-            {{ form.email.label }}
-            {{ form.email(class="form-control",placeholder="Email") }}
-        </fieldset>
-        <fieldset>
-            {{ form.password.label }}
-            {{ form.password(class="form-control",placeholder="Password") }}
-        </fieldset>
-        {{ form.submit(class="btn btn-success") }}
+<h3>Contact any of the Avengers on their landline phone number today!</h3>
+
+{% for name, num in names.items() %}
+    <div class="phone-nums">
+        <ul class="avengers-list">
+            <li>
+                <b>{{ name }}</b> {{ num }}
+            </li>
+        </ul>
     </div>
-</form>
+{% endfor %}
 
 {% endblock content %}
