--- a/avengers_phonebook/templates/nav.html
+++ b/avengers_phonebook/templates/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{{ url_for('home') }}">Call the Avengers</a>
+    <a class="navbar-brand" href="{{ url_for('home') }}">Jarvis</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,6 +10,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('phonebook') }}">Phonebook</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('submitnum') }}">Edit Phonebook</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('register') }}">Register</a>
