--- a/avengers_phonebook/templates/submitnum.html
+++ b/avengers_phonebook/templates/submitnum.html
@@ -12,10 +12,10 @@
         </fieldset>
 
         <fieldset>
-            {{ num.phone_number.label }}
-            {{ num.phone_number(class="form-control", placeholder="Enter Their Phone Number") }}
+            {{ num.phone_num.label }}
+            {{ num.phone_num(class="form-control", placeholder="Enter Their Phone Number") }}
         </fieldset>
-        {{ post.submit(class="btn btn-success") }}
+        {{ num.submit(class="btn btn-success") }}
     </div>
 </form>
 {% endblock content %}
