--- a/avengers_phonebook/templates/num_detail.html
+++ b/avengers_phonebook/templates/num_detail.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <form action="{{ url_for('post_delete', post_id = post.id ) }}" method="post">
+                  <form action="{{ url_for('num_delete', num_id = num.id ) }}" method="post">
                       <input type="submit" value="Delete?" class="btn btn-danger">
                   </form>
                 </div>
