--- a/avengers_phonebook/templates/num_detail.html
+++ b/avengers_phonebook/templates/num_detail.html
@@ -2,43 +2,14 @@
 
 {% block content %}
 
-<a href="{{ url_for('home') }}"><button class="btn btn-primary">Back to Home</button></a>
+<a href="{{ url_for('phonebook') }}"><button class="btn btn-primary">Back to Phonebook</button></a>
 
 <div class="container">
-    <h1>This number was submitted by: {{ num.author.username }}</h1>
+    <h2>Here's everything we've got:</h2>
 
-    <h3>Phone number:</h3>
-    <hr>
-    <h3>Title: {{ num.avenger_name }}</h3>
-    <p> {{ num.phone_num }}</p>
+    <h3>Avenger: {{ num.avenger_name }}</h3>
+    <h3>Phone number: {{ num.phone_num }}</h3>
 
     <blockquote>Created on: {{ num.date_created }}</blockquote>
-
-    <a href="{{ url_for('update_num', num_id = num.id ) }}"><button class="btn btn-primary">Update</button></a>
-
-    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#dangerModal">Delete Num</button>
-
-    <div class="modal fade" id="dangerModal" tabindex="-1" role="dialog" aria-labelledby="dangerModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="dangerModalLabel">Delete Phone Number</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  This action can't be reversed. Are you sure you want to delete?
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <form action="{{ url_for('num_delete', num_id = num.id ) }}" method="post">
-                      <input type="submit" value="Delete?" class="btn btn-danger">
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-</div>
 
 {% endblock content %}
