--- a/avengers_phonebook/templates/num_detail.html
+++ b/avengers_phonebook/templates/num_detail.html
@@ -14,6 +14,29 @@
 
     <a href="{{ url_for('num_update', num_id = num.id ) }}"><button class="btn btn-primary">Update</button></a>
 
+    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#dangerModal">Delete Contact</button>
+
+    <div class="modal fade" id="dangerModal" tabindex="-1" role="dialog" aria-labelledby="dangerModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="dangerModalLabel">Delete Post - Are You Sure?</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              This action can't be reversed. Are you sure you want to delete?
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <form action="{{ url_for('num_delete', num_id = num.id ) }}" method="post">
+                  <input type="submit" value="Delete?" class="btn btn-danger">
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
 
 </div>
 {% endblock content %}
