--- a/avengers_phonebook/templates/home.html
+++ b/avengers_phonebook/templates/home.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 <header class="banner">
-    <h1>Welcome to 1991!</h1>
+    <h1>Welcome!</h1>
     <div class="tagline">
-        <p>Get ready for an incredible call.</p>
+        <p>Who would you like to call today?</p>
     </div>
 </header>
 
