--- a/avengers_phonebook/templates/login.html
+++ b/avengers_phonebook/templates/login.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
+{% if current_user.is_authenticated %}
+
+<p>You silly! You're already logged-in ;)</p>
+
+{% else %}
+
 <div class="container">
     <h1>Login</h1>
     <form action="" method="post">
@@ -19,5 +25,7 @@
         </div>
     </form>
 </div>
+
+{% endif %}
 
 {% endblock content %}
