--- a/avengers_phonebook/templates/num_update.html
+++ b/avengers_phonebook/templates/num_update.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-    <h2>New contact info? No problem!</h2>
+    <p>New contact info? No problem!</p>
     <hr>
     <p>Edit any Avenger's name or phone number here.</p>
     <form action="" method="post">
