--- a/avengers_phonebook/templates/phonebook.html
+++ b/avengers_phonebook/templates/phonebook.html
@@ -4,7 +4,7 @@
 
 {% if current_user.is_authenticated %}
 
-<h2>Hello {{ current_user.username }}!</h2>
+<p>Hello <b>{{ current_user.username }}</b>!</p>
 
 <p>Here are your contacts:</p>
 
