--- a/avengers_phonebook/templates/submitnum.html
+++ b/avengers_phonebook/templates/submitnum.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Submit a new number</h1>
+<p>Submit a new number</p>
 
 <form action="" method="POST">
     <div class="form-group">
