--- a/avengers_phonebook/templates/nav.html
+++ b/avengers_phonebook/templates/nav.html
@@ -12,7 +12,7 @@
           <a class="nav-link" href="{{ url_for('phonebook') }}">Phonebook</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('submitnum') }}">Submit/Edit Phonebook</a>
+          <a class="nav-link" href="{{ url_for('submitnum') }}">New Contact</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('register') }}">Register</a>
