--- a/avengers_phonebook/templates/submitnum.html
+++ b/avengers_phonebook/templates/submitnum.html
@@ -5,6 +5,7 @@
 <p>Add New Contact</p>
 
 <form action="" method="POST">
+    {{ num.hidden_tag() }}
     <div class="form-group">
         <fieldset>
             {{ num.avenger_name.label }}
